--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<div id="header">
+	<div class="header">
 		<a href = "#"> Главная </a><span>/</span>
 		<a href = "puzzles.html"> Загадки </a><span>/</span>
 		<a href = "guess.html"> Угадайка </a><span>/</span>
 		<a href = "media.html"> Угадайка мультиплеер </a>
 	</div>
 
-	<div id="content">
+	<div class="content">
 		<h1>Личный сайт студента GeekBrains</h1>
-		<div id="center">
+		<div class="center">
 			<img src="img/photo.png"></img>
-			<div id="box_text">
+			<div class="box_text">
 				<p>
 				Добрый день. Меня зовут <strong>Майя Кисарова</strong>. Я - <em>начинающий программист</em>. Я совсем недавно встала на этот путь, но уже успела написать свой первый сайт.
 				</p>
@@ -31,7 +31,7 @@
 		</div>
 	</div>
 
-	<div id="footer">
+	<div class="footer">
 		Copyright©2016 <a href = "https://geekbrains.ru/" target = "_blank">GeekBrains </ a>
 	</div>
 </body>
